--- a/AppColegio/static/AppColegio/css/styles.css
+++ b/AppColegio/static/AppColegio/css/styles.css
@@ -110,6 +110,7 @@ hr {
   border: 0;
   border-top: 1px solid;
   opacity: 0.25;
+  margin:2px
 }
 
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
